--- a/index.nginx-debian.html
+++ b/index.nginx-debian.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Geronimo Client 1.0.0</title>
-<link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-<link href="dist/css/geronimo.css" rel="stylesheet" />
-<script src="/socket.io/socket.io.js"></script>
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/flot/jquery.flot.js"></script>
-<script src="node_modules/flot/jquery.flot.time.js"></script>
-<script>
-	function dataBuilder(r, type) {
+    <meta charset="UTF-8">
+    <title>Geronimo Client 1.0.0</title>
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="dist/css/geronimo.css" rel="stylesheet" />
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/flot/jquery.flot.js"></script>
+    <script src="node_modules/flot/jquery.flot.time.js"></script>
+    <script>
+        function dataBuilder(r, type) {
 	  var p = [];
 	  r.forEach(function(el, ix, arr) {
 	   p.push([ (new Date(el._id.ts*1000)).setSeconds(el.data.time), (type == "temp" ? el.data.temp : el.data.hpa) ]);
@@ -56,100 +57,101 @@
 	$('#press-plot').on('hide.bs.collapse', function() { isPressPlot = false; });
 
 	});
-
-</script>
+    </script>
 </head>
+
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
- <div class="container-fluid">
-  <div class="navbar-header">
-   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-2">
-	<span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-	<span class="icon-bar"></span>
-	<span class="icon-bar"></span>
-   </button>
-   <a class="navbar-brand" href="#">Geronimo</a>
-  </div>
- <div class="collapse navbar-collapse" id="bs-2">
-  <ul class="nav navbar-nav navbar-right">
-   <li><a href="#">Czujniki</a></li>
-   <li><a href="#">Stacja Pogodowa</a></li>
-   <li><a href="#">Ciepła Woda Użytkowa (CWU)</a></li>
-  </ul>
- </div>
- </div>
-</nav> 
-<div class="panel panel-default">
-<div class="panel-heading">
- <h4>Stacja Pogodowa</h4> 
- <h6>Gdańsk, ul.Niedziałkowskiego 17</h6>
- <h6 id="h"/>
-</div>
-<div class="panel-body">
-<div class="panel panel-info">
- <div class="panel-heading">Temperatura zewnętrzna</div>
- <div class="panel-body">
-  
-  <div class="flex-container">
-   <div class="flex-item"> 	
-    <h4 id="temp" />
-   </div>
-   <div class="fixed">
-    <button id="btn-temp-stats" type="button" data-toggle="collapse" data-target="#temp-plot" class="btn btn-link">
-     <span class="glyphicon glyphicon-stats"></span>
-    </button>
-   </div>
-  </div>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-2">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Geronimo</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-2">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Czujniki</a></li>
+                    <li><a href="#">Stacja Pogodowa</a></li>
+                    <li><a href="#">Ciepła Woda Użytkowa (CWU)</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4>Stacja Pogodowa</h4>
+            <h6>Gdańsk, ul.Niedziałkowskiego 17</h6>
+            <h6 id="h" />
+        </div>
+        <div class="panel-body">
+            <div class="panel panel-info">
+                <div class="panel-heading">Temperatura zewnętrzna</div>
+                <div class="panel-body">
+                    <div class="flex-container">
+                        <div class="flex-item">
+                            <h4 id="temp" />
+                        </div>
+                        <div class="fixed">
+                            <button id="btn-temp-stats" type="button" data-toggle="collapse" data-target="#temp-plot" class="btn btn-link">
+                                <span class="glyphicon glyphicon-stats"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div id="temp-plot" class="collapse">
+                        <div class="btn-toolbar">
+                            <div class="btn-group">
+                                <h5>GRANULARITY:</h5>
+                                <a href="#" class="btn btn-default">10 SEK</div>
+                                <a href="#" class="btn btn-default">1 MIN</div>
+                                <a href="#" class="btn btn-default">5 MIN</div>
+                                <a href="#" class="btn btn-default">30 MIN</div>
+                                <a href="#" class="btn btn-default">1 HR</div>
+                            </div>
+                        </div>
+                        <div id="temp-plot-container" style="height:250px" />
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    <h6 id="temp-footer" />
+                </div>
+            </div>
 
-  <div id="temp-plot" class="collapse">
-	<div id="temp-plot-container" style="height:250px">
-	</div>
-  </div> 
-  
- </div>
- <div class="panel-footer">
-  <h6 id="temp-footer" />	
- </div> 
-</div>
+            <div class="panel panel-info">
+                <div class="panel-heading">Ciśnienie atmosferyczne</div>
+                <div class="panel-body">
+                    <div class="flex-container">
+                        <div class="flex-item">
+                            <h4 id="hpa" />
+                            <h6 id="mmhg" />
+                        </div>
+                        <div class="fixed">
+                            <button id="btn-press-stats" type="button" data-toggle="collapse" data-target="#press-plot" class="btn btn-link">
+                                <span class="glyphicon glyphicon-stats"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div id="press-plot" class="collapse">
+                        <div id="press-plot-container" style="height:250px" />
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    <h6 id="press-footer" />
+                </div>
+            </div>
+        </div>
+        <div class="panel-footer">
+            <h6 id="cdate" />
+        </div>
+    </div>
 
-<div class="panel panel-info">
- <div class="panel-heading">Ciśnienie atmosferyczne</div>
- <div class="panel-body">
-  <div class="flex-container">
-   <div class="flex-item">
-	<h4 id="hpa" />
-        <h6 id="mmhg" /> 
-   </div>
-   <div class="fixed">
-    <button id="btn-press-stats" type="button" data-toggle="collapse" data-target="#press-plot" class="btn btn-link">
-	<span class="glyphicon glyphicon-stats"></span>
-    </button>		
-   </div>
-  </div>
-
-  <div id="press-plot" class="collapse">
-	<div id="press-plot-container" style="height:250px" />
-  </div>
-  </div>
-  
- </div>
- 
- <div class="panel-footer">
-   <h6 id="press-footer" />
-  </div>
-
-</div>
-
-<div class="panel-footer">
-	<h6 id="cdate" />
-</div>
-
-</div>
-
-<p id="rssi" />
-<p id="address" />
-<p id="batt" />
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <p id="rssi" />
+    <p id="address" />
+    <p id="batt" />
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
