--- a/index.nginx-debian.html
+++ b/index.nginx-debian.html
@@ -103,13 +103,13 @@
                     </div>
                     <div id="temp-plot" class="collapse">
                         <div class="btn-toolbar">
+                            <h5>GRANULARITY:</h5>
                             <div class="btn-group">
-                                <h5>GRANULARITY:</h5>
-                                <a href="#" class="btn btn-default">10 SEK</div>
-                                <a href="#" class="btn btn-default">1 MIN</div>
-                                <a href="#" class="btn btn-default">5 MIN</div>
-                                <a href="#" class="btn btn-default">30 MIN</div>
-                                <a href="#" class="btn btn-default">1 HR</div>
+                                <a href="#" class="btn btn-default">10 SEK</a>
+                                <a href="#" class="btn btn-default">1 MIN</a>
+                                <a href="#" class="btn btn-default">5 MIN</a>
+                                <a href="#" class="btn btn-default">30 MIN</a>
+                                <a href="#" class="btn btn-default">1 HR</a>
                             </div>
                         </div>
                         <div id="temp-plot-container" style="height:250px" />
