--- a/index.nginx-debian.html
+++ b/index.nginx-debian.html
@@ -103,8 +103,8 @@
                     </div>
                     <div id="temp-plot" class="collapse">
                         <div class="btn-toolbar">
-                            <h5>GRANULARITY:</h5>
                             <div class="btn-group">
+                                <h5>GRANULARITY:</h5>
                                 <a href="#" class="btn btn-default">10 SEK</a>
                                 <a href="#" class="btn btn-default">1 MIN</a>
                                 <a href="#" class="btn btn-default">5 MIN</a>
@@ -112,7 +112,7 @@
                                 <a href="#" class="btn btn-default">1 HR</a>
                             </div>
                         </div>
-                        <div id="temp-plot-container" style="height:250px" />
+                        <div id="temp-plot-container" style="height:250px"></div>
                     </div>
                 </div>
                 <div class="panel-footer">
@@ -122,12 +122,12 @@
 
             <div class="panel panel-info">
                 <div class="panel-heading">Ciśnienie atmosferyczne</div>
-                <div class="panel-body">
+                <div class="panel-body"> 
                     <div class="flex-container">
                         <div class="flex-item">
                             <h4 id="hpa" />
                             <h6 id="mmhg" />
-                        </div>
+                        </div> 
                         <div class="fixed">
                             <button id="btn-press-stats" type="button" data-toggle="collapse" data-target="#press-plot" class="btn btn-link">
                                 <span class="glyphicon glyphicon-stats"></span>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div id="press-plot" class="collapse">
-                        <div id="press-plot-container" style="height:250px" />
+                        <div id="press-plot-container" style="height:250px" ></div>
                     </div>
                 </div>
                 <div class="panel-footer">
