--- a/index.nginx-debian.html
+++ b/index.nginx-debian.html
@@ -111,6 +111,14 @@
                                 <a href="#" class="btn btn-default">30 MIN</a>
                                 <a href="#" class="btn btn-default">1 HR</a>
                             </div>
+                            <div class="btn-group">
+                                <h5>ZOOM:</h5>
+                                <a href="#" class="btn btn-default">1 HR</a>
+                                <a href="#" class="btn btn-default">6 HR</a>
+                                <a href="#" class="btn btn-default">12 HR</a>
+                                <a href="#" class="btn btn-default">24 HR</a>
+                                <a href="#" class="btn btn-default">1 WK</a>
+                            </div>
                         </div>
                         <div id="temp-plot-container" style="height:250px"></div>
                     </div>
